tests/NormalTests/paczka1/fuzzy1/74285080.err
Error in line 8: m4jlNyjUZg S847 85,8
Error in line 1: S710 S199 60,3
Error in line 11: S710 S847 98,3
Error in line 14: S710 S199 79,3
Error in line 27: Vod S847 20,8
Error in line 29: MlOBj8 S295 99,9
Error in line 33: MlOBj8 S847 95,06
Error in line 30: Vod S295 65,0
